Updated the Studio demo to fix a bug.

--- a/s3connectorstudiodemo/README
+++ b/s3connectorstudiodemo/README
@@ -19,7 +19,8 @@ HOW TO DEMO
        - Verify that the file is not there.
    c. With a browser (or curl) open http://localhost:8081/getFile
        - This will trigger a flow where Mule will download a file from the web and save it to your bucket.
-   c. Check the contents of your bucket once again
+       - As a response, you will get the file name, plus the latest modification time, which should be very close to the present time and date.
+   c. If you want, tou can check the contents of your bucket once again
        - Open the bucket in the S3 Management Console, located in the following url
            https://console.aws.amazon.com/s3/home?#
        - Verify that the file is there, with the proper modification date/time.
